--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -1,5 +1,28 @@
 <html>
-  <body>
-   <a href="/signup">Signup Formasa</a>
-  </body>
+<head>
+  <link type="text/css" rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" media="screen">
+</head>
+<body style="padding-top: 60px;">
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container" style="margin-left:20px;">
+      <a class="brand" href="/">Schedule Planner</a>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/users">Users</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container content">
+ <div style="width:800px; margin:0 auto;">
+  <a href="/signup">Signup Form</a>
+  <a href="/login">Login Form</a>
+ </div>
+</div>
+<script src="assets/bootstrap/js/bootstrap.js"></script>
+</body>
 </html>
