--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link type="text/css" rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" media="screen">
+  <link type="text/css" rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css" media="screen">
 </head>
 <body style="padding-top: 60px;">
 <div class="navbar navbar-fixed-top">
@@ -9,7 +9,7 @@
       <a class="brand" href="/">Schedule Planner</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/users">Users</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -23,6 +23,6 @@
   <a href="/login">Login Form</a>
  </div>
 </div>
-<script src="assets/bootstrap/js/bootstrap.js"></script>
+<script src="../assets/bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
