--- a/server/pages/signUpForm.html
+++ b/server/pages/signUpForm.html
@@ -1,54 +1,54 @@
-<h2>Signup Form</h2>
-<form method="post">
-  <table>
-    <tr>
-      <td class="label">
-        Username
-      </td>
-      <td>
-        <input type="text" name="username" value="%(username)s">
-      </td>
-      <td class="error">
-        <span style="color: red">%(username_err)s</span>
-      </td>
-    </tr>
+<html>
+<head>
+  <link type="text/css" rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css" media="screen">
+</head>
+<body style="padding-top: 60px;">
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container" style="margin-left:20px;">
+        <a class="brand" href="/">Schedule Planner</a>
+        <div class="nav-collapse collapse">
+          <ul class="nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/users">Users</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container content">
+   <div style="width:800px; margin:0 auto;">
+    <div class="row">
+      <h2>Signup Form</h2>
+    </div>
+    <div class="row">
+      <div class="container">
+        <form method="post">
+          <fieldset>
+            <label>Username</label>
+            <input type="text" name="username" value="{{username}}">
+            <span style="color: red">{{username_err}}</span>
 
-    <tr>
-      <td class="label">
-        Password
-      </td>
-      <td>
-        <input type="password" name="password" value="">
-      </td>
-      <td class="error">
-        <span style="color: red">%(password_err)s</span>
-      </td>
-    </tr>
+            <label>Password</label>
+            <input type="password" name="password" value="">
+            <span style="color: red">{{password_err}}</span>
 
-    <tr>
-      <td class="label">
-        Verify Password
-      </td>
-      <td>
-        <input type="password" name="verify" value="">
-      </td>
-      <td class="error">
-        <span style="color: red">%(verify_err)s</span>
-      </td>
-    </tr>
+            <label>Verify Password</label>
+            <input type="password" name="verify" value="">
+            <span style="color: red">{{verify_err}}</span>
 
-    <tr>
-      <td class="label">
-        Email (optional)
-      </td>
-      <td>
-        <input type="text" name="email" value="%(email)s">
-      </td>
-      <td class="error">
-        <span style="color: red">%(email_err)s</span>
-      </td>
-    </tr>
-  </table>
+            <label>Email (optional)</label>
+            <input type="text" name="email" value="{{email}}">
+            <span style="color: red">{{email_err}}</span>
 
-  <input type="submit">
-</form>
+            <br/>
+            <input class="btn" type="submit">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="../assets/bootstrap/js/bootstrap.js"></script>
+</body>
+</html>
