--- a/server/pages/loginForm.html
+++ b/server/pages/loginForm.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link type="text/css" rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" media="screen">
+  <link type="text/css" rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css" media="screen">
 </head>
 <body style="padding-top: 60px;">
 <div class="navbar navbar-fixed-top">
