--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -12,17 +12,39 @@
           <li><a href="/">Home</a></li>
           <li><a href="/users">Users</a></li>
           <li><a href="#">Contact</a></li>
+          <a class="btn btn-success" type="button" href="/login">Login</a>
+          <a class="btn btn-success" type="button" href="/signup">Sign Up</a>
         </ul>
       </div>
     </div>
   </div>
 </div>
-<div class="container content">
- <div style="width:800px; margin:0 auto;">
-  <a href="/signup">Signup Form</a>
-  <a href="/login">Login Form</a>
- </div>
-</div>
+
+
+<div class="container">
+  <div class="marketing">
+    <h1>Schedule Planner</h1>
+    <p class="marketing-byline">Need reasons to love Schedule Planner? Look no further.</p>
+
+    <div class="row-fluid">
+      <div class="span4">
+        <img class="marketing-img" src="img/1.png">
+        <h2>By nerds, for nerds.</h2>
+        <p>Built by <a href="https://www.facebook.com/alex.petitjean?fref=ts">@Alex</a> , <a href="https://www.facebook.com/vismay.modi.3?fref=ts">@Vismay</a> and <a href="https://www.facebook.com/fanghuang1992">@Fang</a>
+        </p>
+      </div>
+      <div class="span4">
+        <img class="marketing-img" src="img/2.png">
+        <h2>Made for everyone.</h2>
+        <p>Schedule Planner is made for all the student who cannot decide how to prioritize their assignments and meetings. </p>
+      </div>
+      <div class="span4">
+        <img class="marketing-img" src="img/3.png">
+        <h2>Useful for student in RHIT</h2>
+        <p>Too much homework, too many exams, too many meetings.</p>
+      </div>
+      
+    </div>
 <script src="../assets/bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
