--- a/server/pages/welcomeUser.html
+++ b/server/pages/welcomeUser.html
@@ -1,6 +1,10 @@
 <html>
 <head>
   <link type="text/css" rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css" media="screen">
+  <!-- jquery stuff -->
+  <link href="../assets/components/jquery-ui-1.9.1.custom/css/start/jquery-ui-1.9.1.custom.css" rel="stylesheet">
+  <script src="../assets/components/jquery-ui-1.9.1.custom/js/jquery-1.8.2.js"></script>
+  <script src="../assets/components/jquery-ui-1.9.1.custom/js/jquery-ui-1.9.1.custom.js"></script>
 </head>
 <body style="padding-top: 60px;">
 <div class="navbar navbar-fixed-top">
