--- a/server/pages/schedule_dummy.html
+++ b/server/pages/schedule_dummy.html
@@ -22,8 +22,9 @@
 </div>
 <script src="assets/bootstrap/js/bootstrap.js"></script>
 <script>
-  istr = '{{items}}'.replace(/&#34/g, '"');
+  istr = '{{items}}'.replace(/&#34;/g, '"');
   items = JSON.parse(istr);
+  alert(istr);
 
 </script>
 </body>
