login page hooked up to schedule

--- a/server/pages/welcomeUser.html
+++ b/server/pages/welcomeUser.html
@@ -25,6 +25,9 @@
  <div style="width:800px; margin:0 auto;">
   <h2>Hello {{username}} </h2>
  </div>
+ <form method="post">
+    <input class="btn" type="submit" value="Go to Schedule"></input>
+ </form>
 </div>
 <script src="assets/bootstrap/js/bootstrap.js"></script>
 </body>
