add more frature

--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -52,6 +52,16 @@
       </div>
       
     </div>
+<!-- Footer -->
+  
+  <footer class="row">
+    <div class="twelve columns">
+      <hr />
+      <div class="row center">
+       <p>&copy; Copyright 2013 Ideer (TM)</p>
+      </div>
+    </div> 
+  </footer>
 
 <script src="../assets/bootstrap/js/bootstrap.js"></script>
 </body>
