changing user and contact

--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -15,8 +15,8 @@
       <div class="nav-collapse collapse">
       <ul class="nav">
         <li><a href="/">Home</a></li>
-        <li><a href="/users">Users</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/">Users</a></li>
+        <li><a href="/">Contact</a></li>
       </ul>
       <ul class="nav pull-right">
         <a class="btn btn-success" type="button" href="/login">Login</a>
@@ -27,12 +27,11 @@
   </div>
 </div>
 
-
 <div class="container">
   <div class="marketing">
     <h1>Schedule Planner</h1>
     <p class="marketing-byline">Need reasons to love Schedule Planner? Look no further.</p>
-
+    <br><br>
     <div class="row-fluid">
       <div class="span4">
         <img class="marketing-img" src="img/1.png" class="rounded">
@@ -50,9 +49,8 @@
         <h2>Useful for student in RHIT</h2>
         <p>Too much homework, too many exams, too many meetings.</p>
       </div>
-      
     </div>
-<!-- Footer -->
+    <br>
   
   <footer class="row">
     <div class="twelve columns">
