--- a/server/pages/schedule_dummy.html
+++ b/server/pages/schedule_dummy.html
@@ -9,9 +9,9 @@
       <a class="brand" href="/">Schedule Planner</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/users">Users</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/">Users</a></li>
+          <li><a href="/">Contact</a></li>
         </ul>
       </div>
     </div>
