--- a/server/pages/project.html
+++ b/server/pages/project.html
@@ -27,8 +27,8 @@
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li><a href="/">Home</a></li>
-          <li><a href="/users">Users</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/">Users</a></li>
+          <li><a href="/">Contact</a></li>
         </ul>
       </div>
     </div>
