--- a/server/pages/project.html
+++ b/server/pages/project.html
@@ -18,225 +18,89 @@
 
 </head>
 
-<body>
+
 <body style="padding-top: 60px;">
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container" style="margin-left:20px;">
-      <a class="brand" href="/">Schedule Planner</a>
-      <div class="nav-collapse collapse">
-        <ul class="nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/users">Users</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container content">
- <div style="width:800px; margin:0 auto;">
-  	<br></br>
-  	<form action='/someServerSideHandler'>
-		<table data-bind='visible: categories().length >= 0'>
-			<thead>
-				<tr>
-					<th><font size="5">Category name</th>
-					<th><font size="5">Difficulty</th>
-					<th><font size="5">Teacher</th>
-					<th><font size="5">Difficulty</th>
-					<th />
-				</tr>
-			</thead>
-			<tbody data-bind='foreach: categories'>
-				<tr>
-					<td><input class='required' type="text" data-bind='value:ctgName, uniqueName: true' /></td>
-					<td><select data-bind="options: $root.difficultyValues, value: ctgDifficulty, optionsText: 'diffName' "></select></td>
-					<td><input class='required' type="text" data-bind='value:ctgName, uniqueName: true' /></td>
-					<td><select data-bind="options: $root.difficultyValues, value: ctgDifficulty, optionsText: 'diffName' "></select></td>
-
-					
-					<td><a href='#' data-bind='click: $root.removeCategory'><button type="button" class="btn btn-info" data-toggle="button">Delete</button></a></td>
-				</tr>
-			</tbody>
-		</table>
-		<a data-bind='click: addCategory'><button type="button" class="btn btn-info" data-toggle="button">Add Category</button></a>
-		<button data-bind='enable: categories().length > 0' type='submit' class="btn btn-info" data-toggle="button">Submit</button>
-	</form>
-	<br><br><br><br>
-
-	<form>
-		
-		<table data-bind="visible: todoList.length >=0">
-			<thead>
-				<tr>
-					<th><font size="5">Items Todo</th>
-					<th><font size="5">Category</th>
-					<th><font size="5">Date</th>
-				</tr>
-			</thead>
-			<tbody data-bind="foreach:{data:todoList, as: 'todoItem'}">
-				<tr>
-					<td><input class="required" type="text" data-bind="value:todoItem.todoName, uniqueName:false"/></td>
-					<td><select data-bind="options: $root.categories, value: todoItem.todoCtg, optionsText:'ctgName'"></select></td>
-					<td><input type="text" data-bind="value: todoItem.todoDate"/></td>
-					<td><a href="#" data-bind="click: $root.removeTodoItem"><button type="button" class="btn btn-info" data-toggle="button">Remove</button></a></td>
-
-				</tr>
-			</tbody>
-		</table>
-		<button data-bind='click: addTodoItem' class="btn btn-info" data-toggle="button">Add Item</button>
-	</form>
-	<br><br><br>
-	<p><font size="4">I have <span class="label label-success" data-bind='text: categories().length'>&nbsp;</span> categories</p>
-	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="label label-warning" data-bind="text:todoList().length">&nbsp;</span> thing(s) to do.</p>
-	<br>
-	<h2>Prioritized List</h2>
-	<ul data-bind="foreach:{data:prioritizedList, as: 'ptd'}">
-		<li>
-			<span class="label label-important" data-bind="text: $data"></span>
-		</li>
-	</ul>
-
-	<br><br><br><br>
-	<pre data-bind="text:ko.toJSON($root, null, 2)"></pre>
-
-	<!-- <h2>Prioritized Schedule</h2>
-	<ul data-bind="foreach: {data:prioritizedList, as:'ptd'}">
-		<li>
-			<div>
-				<span data-bind="text: ptd.pname"></span>
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container" style="margin-left:20px;">
+				<a class="brand" href="/">Schedule Planner</a>
+				<div class="nav-collapse collapse">
+					<ul class="nav">
+						<li><a href="/">Home</a></li>
+						<li><a href="/users">Users</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</div>
 			</div>
-		</li>
-	</ul> -->
+		</div>
+	</div>
+	<div class="container-fluid">
+		<form method="post">
+			<table data-bind="visible: itemslist().length>=0">
+				<thead>
+					<tr>
+						<th><font size="5">Category name</th>
+						<th><font size="5">Difficulty</th>
+					</tr>
+				</thead>
+				<tbody data-bind='foreach: itemslist'>
+					<tr>
+						<td><input class='required' type="text" data-bind='value:ctgName, uniqueName: true' /></td>
+						<td><select data-bind="options: $root.difficultyValues, value: ctgDifficulty, optionsText: 'diffName' "></select></td>
 
-	<!-- import javascript for the program -->
+						<td><a href='#' data-bind='click: $root.removeCategory'><button type="button" class="btn btn-info" data-toggle="button">Delete</button></a></td>
+					</tr>
+				</tbody>
+			</table>
+		</form>
+	</div>
 
- </div>
-</div>	
 
+	<!--  -->
 	<script type="text/javascript">
 	$(function(){
-		items = (function() {
-			istr = '{{items}}'.replace(/&#34;/g, '"');
-			items = JSON.parse(istr);
-			return items
-		})();
+		items = (
+			function() {
+				istr = '{{items}}'.replace(/&#34;/g, '"');
+				items = JSON.parse(istr);
+				return items
+			}
+			);
 		console.log(items);
 
-
-		var keywords =[
-		{"word":"project", "importance":3, "timesink":5},
-		{"word":"meeting", "importance":4, "timesink":0},
-		{"word":"test", "importance":5, "timesink":3},
-		{"word":"exam", "importance":5, "timesink":3},
-		{"word":"quiz", "importance":2, "timesink":1},
-		{"word":"reading", "importance":1, "timesink":2},
-		{"word":"homework", "importance":3, "timesink":3},
-		{"word":"hw", "importance":3, "timesink":5},
-		{"word":"essay", "importance":4, "timesink":4},
-		{"word":"milestone", "importance":4, "timesink":3},
-		{"word":"report", "importance":4, "timesink":5},
-		{"word":"!", "importance":5, "timesink":0}
-		];
-
-		function Category(name, diff){
-			var self= this;
-			self.ctgName = ko.observable(name);
-			self.ctgDifficulty = ko.observable(diff);
-		}
-
-		function TodoItem(name, ctg, date){
-			var self = this;
-			self.todoName = ko.observable(name);
-			self.todoCtg = ko.observable(ctg);
-			self.todoDate = ko.observable(date);
-
-		}
-
-		
-		function CategoryViewModel(keywords){
-
+		function Item(notes, ctg, priority, diff, duedate){
 			var self = this;
 
-			self.difficultyValues = [
-			{diffName: "ChooseOne", diff: 0},
-			{diffName: "snore..zzz", diff: 1},
-			{diffName: "easy stuff", diff: 2},
-			{diffName: "yipes! focus now!", diff: 3},
-			{diffName: "Gonna be up late :(", diff: 4},
-			{diffName: "OH S**T!", diff: 5}
-			];
-
-			self.categories = ko.observableArray([
-				new Category("Personal Time", self.difficultyValues[0]),
-				new Category("Databases", self.difficultyValues[3]),
-				new Category("Theory Of Comp", self.difficultyValues[4]),
-				new Category("pre-Algebra", self.difficultyValues[1])
-				]);
-
-
-			self.addCategory = function() {
-				self.categories.push( new Category("Type category name", self.difficultyValues[0]));
-			};
-
-			self.removeCategory = function(ctg) {
-				self.categories.remove(ctg);
-			};
-
-
-			self.todoList = ko.observableArray([
-				new TodoItem("DB hw", self.categories[0], "MM/DD/YYY"),
-				new TodoItem("ToC project", self.categories[0], "MM/DD/YYY")
-				]);
-
-			self.removeTodoItem = function(item){
-				self.todoList.remove(item);;
-			}
-			self.addTodoItem = function(){
-				self.todoList.push( new TodoItem("New Task", self.categories[0],"MM/DD/YYY" ));
-			}
-			//console.log(self.todoList);
-			
-			self.prioritizedList = ko.computed(function(){
-				var tempTodoList = self.todoList.slice();
-				var pList = new Array();
-				var tempPList = new Array();
-				//console.log(tempTodoList);
-				for(var i=0; i<tempTodoList.length; i++){
-					var obj ={
-						name: tempTodoList[i].todoName._latestValue.toLowerCase(),
-						//diff: tempTodoList[i].todoCtg._latestValue.ctgDifficulty._latestValue.diff,
-						date: tempTodoList[i].todoDate._latestValue
-						//ctg: tempTodoList[i].todoCtg._latestValue.ctgName._latestValue
-					};
-					tempPList.push(obj);
-					pList.push(tempTodoList[i].todoName._latestValue);
-				}
-				//console.log(tempPList);
-
-
-				for(var i=0; i<tempPList.length;i++){
-					var string = tempPList[i].name;
-					var taskImpCount =0;
-					for(var k=0; k<keywords.length; k++){
-						var index = string.search(keywords[k].word)
-						//console.log(keywords[k].word);
-						if(index>=0){
-							//console.log(keywords[k].word);
-						}
-					}
-				}
-				
-				return pList;
-			})
+			self.itemNotes = ko.observable(notes);
+			self.itemCtg = ko.observable(ctg);
+			self.itemPriority = priority;
+			self.itemDiff = ko.observable(diff);
+			self.itemDate = ko.observable(duedate);	
 		}
 
-		ko.applyBindings(new CategoryViewModel(keywords));
+		function ItemViewModel (keywords){
+			var self =this;
 
-	});
+			self.itemslist = ko.observableArray([
+				new Item("lab 9",, 1, 3, new Date ()),
+				new Item("homework 4",,1,4, new Date())
+				]);
+
+			self.addItem = function() {
+				self.itemslist.push(new Item("dummy text",));
+			}
+		}
+		ko.applyBindings(new ItemViewModel(keywords));
+	//formatting
+	})
+
+
+
+
+
 	</script>
-<script src="../assets/bootstrap/js/bootstrap.js"></script>
+
+	<script src="../assets/bootstrap/js/bootstrap.js"></script>
 </body>
 
 </html>
