--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -16,7 +16,7 @@
       <ul class="nav">
         <li><a href="/">Home</a></li>
         <li><a href="/">Users</a></li>
-        <li><a href="/">Contact</a></li>
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
       <ul class="nav pull-right">
         <a class="btn btn-success" type="button" href="/login">Login</a>
