hacked the text area post

--- a/server/pages/signUpForm.html
+++ b/server/pages/signUpForm.html
@@ -28,7 +28,7 @@
       </div>
       <div class="row">
         <div class="container">
-          <form method="post">
+          <form method="post" values ="{{items}}">
             <fieldset>
               <label>Username</label>
               <input type="text" name="username" value="{{username}}">
