--- a/server/pages/project.html
+++ b/server/pages/project.html
@@ -65,7 +65,7 @@
 				</tbody>
 			</table>
 			<a href='#' data-bind='click: $root.addItem'><button type="button" class="btn btn-info" data-toggle="button">Add Item</button></a>
-			<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" type="hidden"></textarea>
+			<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" style="visibility: hidden;"></textarea>
 			<input class="btn" type="submit"></input>
 
 		</form>
