--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -12,12 +12,7 @@
 	<link href="/assets/components/jquery-ui-1.9.1.custom/css/start/jquery-ui-1.9.1.custom.css" rel="stylesheet">
 	<script src="/assets/components/jquery-ui-1.9.1.custom/js/jquery-1.8.2.js"></script>
 	<script src="/assets/components/jquery-ui-1.9.1.custom/js/jquery-ui-1.9.1.custom.js"></script>
-
-
-
-
 </head>
-
 
 <body style="padding-top: 60px;">
 	<div class="navbar navbar-fixed-top">
@@ -65,14 +60,14 @@
 			</table>
 			<a href='#' data-bind='click: $root.addItem'><button type="button" class="btn btn-info" data-toggle="button">Add Item</button></a>
 			<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" style="visibility: hidden;"></textarea>
-			<input class="btn" type="submit"></input>
+			<input class="btn" type="submit">
 
 		</form>
 	</div>
 	
 	<div class="pagination">
 		<ul>
-			<li><a href="/login/scheduler">Assignments</a></li>
+			<li><a href="/login/scheduler/assignments">Assignments</a></li>
 			<li><a href="/login/scheduler/exams">Exams</a></li>
 			<li><a href="/login/scheduler/work">Work</a></li>
 			<li><a href="/login/scheduler/reminders">Reminders</a></li>
@@ -81,8 +76,6 @@
 	</div>
 
 	<br><br><br><br>
-	
-
 
 	<!--  -->
 	<script type="text/javascript">
@@ -136,7 +129,7 @@
 		var coursesarray = parseCourses(items);
 		console.log(coursesarray);
 		function ItemViewModel (itemsarray, coursesarray){
-			var self =this;
+			var self = this;
 			self.courses = coursesarray;
 
 			self.difficultyValues = [
@@ -155,7 +148,7 @@
 			}
 
 			self.removeItem = function(itm){
-				self.itemslist.remove(itm)
+				self.itemslist.remove(itm);
 			}
 
 			self.submitMe = function() {
@@ -165,15 +158,7 @@
 		}
 		ko.applyBindings(new ItemViewModel(itemsarray, coursesarray));
 	//formatting
-
-	
-	
-})	
-
-
-
-
-
+})
 </script>
 
 <script src="/assets/bootstrap/js/bootstrap.js"></script>
