fixed pagination links

--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -67,11 +67,11 @@
 	
 	<div class="pagination">
 		<ul>
-			<li><a href="/login/scheduler/assignments">Assignments</a></li>
-			<li><a href="/login/scheduler/exams">Exams</a></li>
-			<li><a href="/login/scheduler/work">Work</a></li>
-			<li><a href="/login/scheduler/reminders">Reminders</a></li>
-			<li><a href="/login/scheduler/meetings">Meetings</a></li>
+			<li><a href="/login/scheduler/assignments?username={{username}}">Assignments</a></li>
+			<li><a href="/login/scheduler/exams?username={{username}}">Exams</a></li>
+			<li><a href="/login/scheduler/work?username={{username}}">Work</a></li>
+			<li><a href="/login/scheduler/reminders?username={{username}}">Reminders</a></li>
+			<li><a href="/login/scheduler/meetings?username={{username}}">Meetings</a></li>
 		</ul>
 	</div>
 
