--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -27,7 +27,7 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="/">Home</a></li>
-						<li><a href="/users">Users</a></li>
+						<li><a href="/login/courses">Courses</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
@@ -72,7 +72,7 @@
 	
 	<div class="pagination">
 		<ul>
-			<li><a href="/login/scheduler">Assignments</a></li>
+			<li><a href="/login/scheduler/assignments?username="+"{{username}}">Assignments</a></li>
 			<li><a href="/login/scheduler/exams">Exams</a></li>
 			<li><a href="/login/scheduler/work">Work</a></li>
 			<li><a href="/login/scheduler/reminders">Reminders</a></li>
