--- a/server/pages/loginForm.html
+++ b/server/pages/loginForm.html
@@ -10,7 +10,7 @@
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li><a href="/">Home</a></li>
-          <li><a href="/">Users</a></li>
+          <li><a href="/login/courses">Courses</a></li>
           <li><a href="/">Contact</a></li>
         </ul>
       </div>
