--- a/server/pages/contact.html
+++ b/server/pages/contact.html
@@ -32,13 +32,13 @@
     <a >Contact</a>
     </li>
 </ul>
-<div class="row">
-   <div class="four columns">
-    <li><a href="mailto:petitjam@rose-hulman.edu"><img src="http://lorempixel.com/200/200/?1" /><br />Alex</a></li></div>
-     <div class="four columns">
-     <li><a href="mailto:modivr@rose-hulman.edu"><img src="http://lorempixel.com/200/200/?2" /><br />Vismay</a></li></div>
-      <div class="four columns">
-     <li><a href="mailto:huangf@rose-hulman.edu"><img src="http://lorempixel.com/200/200/?3" /><br />Fang</a></li></div>
+<div class="row-fluid">
+   <div class="span4">
+    <a href="mailto:petitjam@rose-hulman.edu"><img src="http://lorempixel.com/200/200/?1" /><br />Alex</a></div>
+     <div class="span4">
+     <a href="mailto:modivr@rose-hulman.edu"><img src="http://lorempixel.com/200/200/?2" /><br />Vismay</a></div>
+    <div class="span4">
+     <a href="mailto:huangf@rose-hulman.edu"><img src="http://lorempixel.com/200/200/?3" /><br />Fang</a></div>
 </div>
   <script src="../assets/bootstrap/js/bootstrap.js"></script>
 </body>
