loading courses to page

--- a/server/pages/Work.html
+++ b/server/pages/Work.html
@@ -36,14 +36,16 @@
             <table data-bind="visible: itemslist().length>=0">
                 <thead>
                     <tr>
-                        <th><font size="5">Name</font></th>
-                        <th><font size="5">Course</font></th>
-                        <th><font size ="5">Assignment Diff.</font></th>
-                        <th><font size ="5">Due Date</font></th>
+                        <th><font size="5">Job</font></th>
+                        <th><font size ="5">Date</font></th>
+                        <th><font size="5">Start Time</font></th>
+                        <th><font size ="5">End Time</font></th>
                     </tr>
                 </thead>
                 <tbody data-bind='foreach: itemslist'>
                     <tr>
+
+                    <!--
                         <td><input style="height:30px;" class='required' type="text" data-bind='value:itemName' /></td>
 
                         <td><select data-bind="options: $root.courses, value: itemCourse, optionsText: 'courseName' "></select></td>
@@ -53,7 +55,7 @@
                         <td><input style="height:30px;" type="date" name="duedate"></td>
 
                         <td><a href='#' data-bind='click: $root.removeItem'><button type="button" class="btn btn-info" data-toggle="button">Delete</button></a></td>
-
+                    -->
 
                     </tr>
                 </tbody>
