fixed courses links

--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -22,7 +22,7 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="/">Home</a></li>
-						<li><a href="/login/courses">Courses</a></li>
+						<li><a href="/login/courses?username={{username}}">Courses</a></li>
 						<li><a href="/contact">Contact</a></li>
 					</ul>
 				</div>
