--- a/server/pages/contact.html
+++ b/server/pages/contact.html
@@ -14,7 +14,7 @@
         <div class="nav-collapse collapse">
           <ul class="nav">
             <li><a href="/">Home</a></li>
-            <li><a href="/">Users</a></li>
+            <li><a href="/login/courses?username={{username}}">Courses</a></li>
             <li><a href="/">Contact</a></li>
           </ul>
         </div>
