--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -15,7 +15,7 @@
       <div class="nav-collapse collapse">
       <ul class="nav">
         <li><a href="/">Home</a></li>
-        <li><a href="/">Users</a></li>
+        <li><a href="/login/courses?username={{username}}">Courses</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
       <ul class="nav pull-right">
