added difficulty column to coursesinschedules

--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -92,8 +92,8 @@
 
 		var items = getItems(), courses = getCourses();
 
-		// console.log(items);
-		// console.log(courses);
+		console.log(items);
+		console.log(courses);
 
 		function Item(name, course, diff, duedate, id){
 			var self = this;
