--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -98,6 +98,7 @@
 		function Item(name, course, diff, duedate, id){
 			var self = this;
 
+			alert(course);
 			self.itemName = ko.observable(name);
 			self.itemCourse = ko.observable(course);
 			self.itemDiff = ko.observable(diff);
