--- a/server/pages/usercourses.html
+++ b/server/pages/usercourses.html
@@ -32,8 +32,32 @@
 
 	<div class="container-fluid content">
 		<h1></h1>
-		<form method="post" data-bind="submit:submitMe">
+		<form method="post" data-bind="submit: submitMe">
+			<table data-bind="visible: courseslist().length>=0">
+				<thead>
+					<tr>
+						<th><font size="5">Course</font></th>
+						<th><font size ="5">Course Diff.</font></th>
+					</tr>
+				</thead>
+				<tbody data-bind='foreach: courseslist'>
+					<tr>
+
+						<td><select data-bind="options: $root.givencourses, value: cName, optionsText: 'Name' "></select></td>
+
+						<td><select data-bind="options: $root.difficultyValues, value: diff, optionsText: 'diffName' "></select></td>
+
+						<td><a href='#' data-bind='click: $root.removeCourse'><button type="button" class="btn btn-info" data-toggle="button">Delete</button></a></td>
+
+
+					</tr>
+				</tbody>
+			</table>
+			<a href='#' data-bind='click: $root.addCourse'><button type="button" class="btn btn-info" data-toggle="button">Add Course</button></a>
+			<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" style="visibility: ;"></textarea>
+			<input class="btn" type="submit">
 		</form>
+		
 	</div>
 	
 	<div class="pagination">
@@ -51,15 +75,86 @@
 	<!--  -->
 	<script type="text/javascript">
 	$(function(){
-		function getData() {
-			istr = '{{courses}}'.replace(/&#34;/g, '"');
+		//GET INFO FROM DATABASE
+		function getUserCourses() {
+			istr = '{{usercourses}}'.replace(/&#34;/g, '"');
 			items = JSON.parse(istr);
 			return items
 		};
-		var courses = getData();
-		console.log(courses);
+		function getAllCourses() {
+			istr = '{{allcourses}}'.replace(/&#34;/g, '"');
+			items = JSON.parse(istr);
+			return items
+		};
+		var usercourses = getUserCourses();
+		var allcourses = getAllCourses();
+		//console.log(allcourses);
 
+		function UserCourse (name, id, diff, tName){
+			var self = this;
+
+			self.cName = ko.observable(name);
+			self.cID = ko.observable(id);
+			self.diff = ko.observable(diff);
+			self.tName = ko.observable(tName);
+		}
+		function Course(name, CID, teacher){
+			var self= this;
+			self.Name = name;
+			self.CID = CID;
+			self.Teacher = teacher;
+		}
+
+		function parseUserCourses(courses){
+			cList = [];
+			courses.forEach(function(c, i) {
+				cList.push(new UserCourse(c.CourseName, 
+					c.CourseID, c.Difficulty, c.TeacherName));
+			});
+			return cList;
+
+		}
+		function parseAllCourses(courses){
+			cList = [];
+			courses.forEach(function(c,i){
+				cList.push(new Course(c.Name, c.CID, c.Teacher));
+			});
+			return cList;
+		}
+		var usercoursesarray = parseUserCourses(usercourses);
+		var allcoursesarray = parseAllCourses(allcourses);
+		//console.log(allcoursesarray);
 		
+		function CourseViewModel(usercoursesarray, allcoursesarray){
+			var self = this;
+
+			self.courseslist = ko.observable(usercoursesarray)
+			self.givencourses = allcoursesarray;
+
+			self.difficultyValues = [
+			{diffName: "ChooseOne", diff: 0},
+			{diffName: "snore..zzz", diff: 1},
+			{diffName: "easy stuff", diff: 2},
+			{diffName: "yipes! focus now!", diff: 3},
+			{diffName: "Gonna be up late :(", diff: 4},
+			{diffName: "OH S**T FML!", diff: 5}
+			];
+
+			self.addCourse = function(){
+				self.courseslist.push(new UserCourse(self.allcoursesarray[0].Name, self.allcoursesarray[0].CID, self.difficultyValues[0], self.allcoursesarray[0].Teacher));
+			}
+
+			self.removeCourse = function(itm){
+				self.courseslist.remove(itm);
+			}
+
+			self.submitMe= function(){
+				return ko.toJSON($root, null, 2);
+			}
+
+
+		}
+		ko.applyBindings(new CourseViewModel(usercoursesarray, allcoursesarray))
 	//formatting
 })
 </script>
