--- a/server/pages/usercourses.html
+++ b/server/pages/usercourses.html
@@ -5,13 +5,12 @@
 	<title>Ideer</title>
 	<!-- styles stuff -->
 	<link type="text/css" rel="stylesheet" href="/assets/bootstrap/css/bootstrap.css" media="screen">
+	<!-- jquery stuff -->
+
+	<script src="/assets/components/jquery-ui-1.9.1.custom/js/jquery-1.8.2.js"></script>
 	<!-- knockout stuff -->
 	<script type="text/javascript" src="/assets/components/knockout-2.2.0.debug.js"></script>
-	<script type='text/javascript' src="http://knockoutjs.com/examples/resources/knockout.simpleGrid.1.3.js"></script>
-	<!-- jquery stuff -->
-	<link href="/assets/components/jquery-ui-1.9.1.custom/css/start/jquery-ui-1.9.1.custom.css" rel="stylesheet">
-	<script src="/assets/components/jquery-ui-1.9.1.custom/js/jquery-1.8.2.js"></script>
-	<script src="/assets/components/jquery-ui-1.9.1.custom/js/jquery-ui-1.9.1.custom.js"></script>
+
 </head>
 
 <body style="padding-top: 60px;">
@@ -31,8 +30,8 @@
 	</div>
 
 	<div class="container-fluid content">
-		<h1></h1>
-		<form method="post" data-bind="submit: submitMe">
+		<h1>{{username}}</h1>
+		<form>
 			<table data-bind="visible: courseslist().length>=0">
 				<thead>
 					<tr>
@@ -54,8 +53,11 @@
 				</tbody>
 			</table>
 			<a href='#' data-bind='click: $root.addCourse'><button type="button" class="btn btn-info" data-toggle="button">Add Course</button></a>
-			<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" style="visibility: ;"></textarea>
-			<input class="btn" type="submit">
+			<form method="post">
+				<textarea data-bind="text:ko.toJSON($root, null, 2)" style="visibility: ;"></textarea>
+				<input class="btn" type="submit"></input>
+			</form>
+
 		</form>
 		
 	</div>
@@ -74,7 +76,7 @@
 
 	<!--  -->
 	<script type="text/javascript">
-	$(function(){
+	$(function($){
 		//GET INFO FROM DATABASE
 		function getUserCourses() {
 			istr = '{{usercourses}}'.replace(/&#34;/g, '"');
@@ -88,15 +90,13 @@
 		};
 		var usercourses = getUserCourses();
 		var allcourses = getAllCourses();
-		//console.log(allcourses);
+		//console.log(usercourses);
 
-		function UserCourse (name, id, diff, tName){
+		function UserCourse (name, diff){
 			var self = this;
-
+			//console.log(name.CID);
 			self.cName = ko.observable(name);
-			self.cID = ko.observable(id);
 			self.diff = ko.observable(diff);
-			self.tName = ko.observable(tName);
 		}
 		function Course(name, CID, teacher){
 			var self= this;
@@ -108,9 +108,10 @@
 		function parseUserCourses(courses){
 			cList = [];
 			courses.forEach(function(c, i) {
-				cList.push(new UserCourse(c.CourseName, 
-					c.CourseID, c.Difficulty, c.TeacherName));
+				//console.log(c);
+				cList.push(new UserCourse(c.CourseName, c.Difficulty));
 			});
+			//console.log(cList);
 			return cList;
 
 		}
@@ -123,12 +124,12 @@
 		}
 		var usercoursesarray = parseUserCourses(usercourses);
 		var allcoursesarray = parseAllCourses(allcourses);
-		//console.log(allcoursesarray);
+		console.log(usercoursesarray);
 		
 		function CourseViewModel(usercoursesarray, allcoursesarray){
 			var self = this;
 
-			self.courseslist = ko.observable(usercoursesarray)
+			self.courseslist = ko.observableArray(usercoursesarray)
 			self.givencourses = allcoursesarray;
 
 			self.difficultyValues = [
@@ -141,7 +142,7 @@
 			];
 
 			self.addCourse = function(){
-				self.courseslist.push(new UserCourse(self.allcoursesarray[0].Name, self.allcoursesarray[0].CID, self.difficultyValues[0], self.allcoursesarray[0].Teacher));
+				self.courseslist.push(new UserCourse(allcoursesarray[0], self.difficultyValues[0]));
 			}
 
 			self.removeCourse = function(itm){
@@ -149,7 +150,7 @@
 			}
 
 			self.submitMe= function(){
-				return ko.toJSON($root, null, 2);
+				return ko.toJSON($root, null,2);
 			}
 
 
