removed toggle from add item button

--- a/server/pages/Work.html
+++ b/server/pages/Work.html
@@ -58,7 +58,7 @@
                     </tr>
                 </tbody>
             </table>
-            <a href='#' data-bind='click: $root.addItem'><button type="button" class="btn btn-info" data-toggle="button">Add Item</button></a>
+            <a href='#' data-bind='click: $root.addItem'><button type="button" class="btn btn-info">Add Item</button></a>
             <textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" style="visibility: ;"></textarea>
             <input class="btn" type="submit">
 
