--- a/server/pages/usercourses.html
+++ b/server/pages/usercourses.html
@@ -52,7 +52,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<a href='#' data-bind='click: $root.addCourse'><button type="button" class="btn btn-info" data-toggle="button">Add Course</button></a>
+			<a href='#' data-bind='click: $root.addCourse'><button type="button" class="btn btn-info">Add Course</button></a>
 			<form method="post">
 				<textarea data-bind="text:ko.toJSON($root, null, 2)" style="visibility: ;"></textarea>
 				<input class="btn" type="submit"></input>
