--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -58,7 +58,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<a href='#' data-bind='click: $root.addItem'><button type="button" class="btn btn-info" data-toggle="button">Add Item</button></a>
+			<a href='#' data-bind='click: $root.addItem'><button type="button" class="btn btn-info">Add Item</button></a>
 			<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" style="visibility: ;"></textarea>
 			<input class="btn" type="submit">
 
@@ -97,8 +97,7 @@
 
 		function Item(name, course, diff, duedate, id){
 			var self = this;
-
-			alert(course);
+			
 			self.itemName = ko.observable(name);
 			self.itemCourse = ko.observable(course);
 			self.itemDiff = ko.observable(diff);
