--- a/server/pages/exams.html
+++ b/server/pages/exams.html
@@ -51,7 +51,7 @@
 
 						<td><input style="height:30px;" type="date" name="duedate"></td>
 
-						<td><a href='#' data-bind='click: $root.removeItem'><button type="button" class="btn btn-info" data-toggle="button">Delete</button></a></td>
+						<td><a href='#' data-bind='click: $root.removeItem'><button type="button" class="btn btn-info">Delete</button></a></td>
 
 
 					</tr>
