--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -32,7 +32,7 @@
 
 	<div class="container-fluid content">
 		<h1></h1>
-		<form method="post" data-bind="submit:submitMe">
+		<form method="post">
 			<table data-bind="visible: itemslist().length>=0">
 				<thead>
 					<tr>
@@ -163,10 +163,6 @@
 				self.itemslist.remove(itm);
 			}
 
-			self.submitMe = function() {
-				// gather myself for posting
-				return ko.toJSON(root, null, 2);
-			}
 		}
 		ko.applyBindings(new ItemViewModel(itemsarray, coursesarray));
 	//formatting
